src/App.css
.marginLeftAdjustment{
  display: flex;
  margin-left: 240px;
 
  }

.navbar{
  overflow: hidden;
  position: fixed; /* Set the navbar to fixed position */
  top: 0; /* Position the navbar at the top of the page */
  width: 100%;
}
.messagebar{
  overflow: hidden;
  background-color: rgb(255, 255, 255);
  position: fixed; /* Set the navbar to fixed position */
  bottom: 0; /* Position the navbar at the bottom of the page */
  width: 100%;
}

.mainchat {
  margin-top: 100px;
  margin-bottom: 200px;
  margin-left:1%;
  margin-right:2%;
  height: 50%;
  overflow: hidden;
  bottom: 110; /* Position the navbar at the bottom of the page */
  width:98%;
}

.text{
  font-size: 1.3rem;
}

.received{
  color:rgb(8, 31, 105);
  display: flex;
  flex-direction: row-reverse;
}

.sent {
  display: flex;
  align-items: right;
}

.icon img{
  width: 25px;
  height: 30px;
  border-radius:15px;
}

.images {
  display: flex;
}

.senderImage {
  margin: 0 auto;
  margin-top: 15%;
  width: 120%;
  margin-left: -8%;
}

.channelfix{
  display: inline-block;
}

@media(max-width: 800px){
  .senderImage {
    margin-top: 90%;
  }
}

